towards more sane resource handling